--- a/examples/example1_simple_playbooks/line-break-test.yml
+++ b/examples/example1_simple_playbooks/line-break-test.yml
@@ -1,4 +1,7 @@
 ---
+# Sample playbook to check out how line breaks are handled in play variables
+# call with
+#    ansible-playbook line-break-test.yml
 - name: Play 1
   hosts: localhost
   gather_facts: no
