Replaced playbook getversion.yml by getversion_ios.yml

--- a/examples/example1_simple_playbooks/getversion_ios.yml
+++ b/examples/example1_simple_playbooks/getversion_ios.yml
@@ -9,7 +9,7 @@
 
 - name: Issue 'show version' command to Cisco IOS Router and print info
   gather_facts: no
-  hosts: all
+  hosts: iosrouters
   tasks:
 
     - name: send show commands ('show version') to IOS device
