--- a/examples/example3_vpndoku/get_interface_data.yml
+++ b/examples/example3_vpndoku/get_interface_data.yml
@@ -7,55 +7,55 @@
 ## my_invname       inventory name of the device on which the "show cdp neighbor"
 ##                  command shall be executed
 ## my_nodeType      either "pe" or "ce"
-## partner_hostname hostname of a device connected to the my_invname device
-## partner_nodetype either "ce" or "cr" 
+## rmt_hostname     hostname of a remote device connected to the my_invname device
+## rmt_nodetype     either "ce" or "cr" 
 ##
-## Result
+## Result:
 ## The play will set the following facts for the my_invname device
-## {{my_nodeType}}_{{partner_nodetype}}_ifType
-##                  Type of interface on my_invname device used for connection
-##                  to partner_hostname device
+## if called with  my_nodeType=pe  and  rmt_nodetype=ce.
+## pe_ce_ifType     Interface Type on PE Router towards CE.
+## pe_ce_ifName     Interface name on PE Router towards CE.
+## ce_pe_ifType     Interface Type on CE Router towards PE.
+## ce_pe_ifName     Interface name on CE Router towards PE.
+##
+## If called with  my_nodeType=ce  and  rmt_nodetype=cr  the names are accordingly.
 ##  
 ## Usage:
-##    ansible-playbook -i inventory  get_interface_data.yml \
-##                     -e 'my_invname=R1_ios my_nodeType=pe partner_hostname=R2_ios partner_nodetype=ce'
+##    ansible-playbook -i inventory -v get_interface_data.yml \
+##            -e 'my_invname=R1_ios my_nodeType=pe rmt_hostname=R3_ios rmt_nodetype=ce'
 ##
 
 - name: Example, analyze output of 'show cdp neighbor' executed on an IOS device
   gather_facts: no
   hosts: "{{my_invname}}"
-  vars:
-    cdpn_out: |
-        Capability Codes: R - Router, T - Trans Bridge, B - Source Route Bridge
-                          S - Switch, H - Host, I - IGMP, r - Repeater, P - Phone, 
-                          D - Remote, C - CVTA, M - Two-port Mac Relay 
-
-        Device ID        Local Intrfce     Holdtme    Capability  Platform  Port ID
-        R2_ios.devoteam.de
-                         Gig 0/1           150              R B             Gig 0/0
-        R3_ios.devoteam.de
-                         Gig 0/2           141              R B             Gig 0/0
-
-        Total cdp entries displayed : 2
 
   tasks:
+    - name: Execute 'show cdp neighbor' command
+      ios_command:
+        commands:
+          - show cdp neighbor
+      register: cdpn_result
+      when: "ansible_network_os == 'ios'"
+
     - name: Display 'show cdp neighbor' output
       debug:
-        var: cdpn_out
+        var: cdpn_result.stdout[0]
+        verbosity: 1
 
     - name: Analyze 'show cdp neighbor' output
       set_fact:
-        neighbor_data: "{{''.join( [partner_hostname, cdpn_out.replace('\n', '@@@').replace('\r', '').replace('@@@ ', ' ').partition(partner_hostname)[2].split('@@@', 1)[0]] ).split()}}"
+        neighbor_data: "{{''.join( [rmt_hostname, cdpn_result.stdout[0].replace('\n', '@@@').replace('\r', '').replace('@@@ ', ' ').partition(rmt_hostname)[2].split('@@@', 1)[0]] ).split()}}"
 
     - name: Store interface data in facts cache
       set_fact:
-        "{{my_nodeType}}_{{partner_nodetype}}_ifType": "{{neighbor_data[1]}}"
-        "{{my_nodeType}}_{{partner_nodetype}}_ifName": "{{neighbor_data[2]}}"
-        "{{partner_nodetype}}_{{my_nodeType}}_ifType": "{{neighbor_data[6]}}"
-        "{{partner_nodetype}}_{{my_nodeType}}_ifName": "{{neighbor_data[7]}}"
+        "{{my_nodeType}}_{{rmt_nodetype}}_ifType": "{{neighbor_data[1]}}"
+        "{{my_nodeType}}_{{rmt_nodetype}}_ifName": "{{neighbor_data[2]}}"
+        "{{rmt_nodetype}}_{{my_nodeType}}_ifType": "{{neighbor_data[6]}}"
+        "{{rmt_nodetype}}_{{my_nodeType}}_ifName": "{{neighbor_data[7]}}"
 
-    - name: Show defined host variables
+    - name: Show stored interface data
       debug:
-        var: hostvars['{{inventory_hostname}}']
-        verbosity: 1
+        msg: |
+             Local interface on {{my_invname}}: pe_ce_ifType={{pe_ce_ifType}}, pe_ce_ifName={{pe_ce_ifName}}
+             Remote interface on {{rmt_hostname}}: ce_pe_ifType={{ce_pe_ifType}}, ce_pe_ifName={{ce_pe_ifName}}
 ...
